added readme and form checking on lab view

--- a/templates/lab.html
+++ b/templates/lab.html
@@ -44,7 +44,7 @@
   <div class="container" id="mainContainer">
     <div class="row">
       <div class="col-md-6">
-        <form id="form" class="needs-validation" novalidate>
+        <form id="form" class="needs-validation" >
           <div class="form-row">
             <div class="col">
                 <div class="form-group">
@@ -163,11 +163,14 @@
           data:$('.needs-validation').serialize(),
           success:function(){
             form.classList.add('was-validated');
-            $('#startButton').setDisabled(true)
+            $('#startButton').disabled = true
             $('#stopButton').css('visbility', 'visible')
-            $( "input" ).prop( "disabled", true )
+            $(':input').prop("disabled", true)
           }
       });
+      }
+      else {
+
       }
       
   });
