--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,3 +25,8 @@ textarea {
     resize: none;
     background: #d1d1d1;
 }
+
+.btn-danger {
+    background-color: #32383e;
+    border-color: #32383e;
+}
