--- a/templates/lab.html
+++ b/templates/lab.html
@@ -44,44 +44,46 @@
   <div class="container" id="mainContainer">
     <div class="row">
       <div class="col-md-6">
-        <form id="form" class="needs-validation" >
+        <form id="form" class="needs-validation">
           <div class="form-row">
             <div class="col">
-                <div class="form-group">
-              <label for="weight">Weight</label>
-              <input id="weight" type="text" name="weight" class="form-control" placeholder="Weight" pattern="\d\d?[\.\d+]?" required>
+              <div class="form-group">
+                <label for="weight">Weight</label>
+                <input id="weight" type="text" name="weight" class="form-control" placeholder="Weight" pattern="\d\d?[\.\d+]?"
+                  required>
               </div>
               <small class="form-text text-muted">Please use . (dot) instead of , (comma) for decimals</small>
             </div>
             <div class="col">
-                <div class="form-group">
-              <label for="height">Height</label>
-              <input id="height" type="text" name="height" class="form-control" placeholder="Height" pattern="\d\d?[\.\d+]?" required>
+              <div class="form-group">
+                <label for="height">Height</label>
+                <input id="height" type="text" name="height" class="form-control" placeholder="Height" pattern="\d\d?[\.\d+]?"
+                  required>
+              </div>
+
             </div>
-            
-            </div>
-            
+
           </div>
           <div class="form-row">
             <div class="col">
-                <div class="form-group">
-              <label for="age">Age</label>
-              <input id="age" type="text" name="age" class="form-control" pattern="\d\d?" placeholder="Age" required>
+              <div class="form-group">
+                <label for="age">Age</label>
+                <input id="age" type="text" name="age" class="form-control" pattern="\d\d?" placeholder="Age" required>
               </div>
             </div>
             <div class="col">
-                <div class="form-group">
-              <label for="sex">Sex</label>
-              <select id="sex" name="sex" class="form-control" placeholder="Sex" required>
-                <option>Male</option>
-                <option>Female</option>
-              </select>
+              <div class="form-group">
+                <label for="sex">Sex</label>
+                <select id="sex" name="sex" class="form-control" placeholder="Sex" required>
+                  <option>Male</option>
+                  <option>Female</option>
+                </select>
               </div>
             </div>
           </div>
 
           <button class="btn btn-primary" action="submit" id="startButton">Start</button>
-          <button class="btn btn-danger" onclick="stop()" id="stopButton" style="visibility:hidden">Stop</button>
+          <button class="btn btn-danger" type="button" onclick="stop()" id="stopButton" style="display:none">Stop</button>
         </form>
       </div>
       <div class="col-md-4">
@@ -127,23 +129,26 @@
         <div class="container">
           <label for="timer">Time remaining</label>
           <div id="timer">
-            12:00
           </div>
         </div>
       </div>
       <div class="col-md-6">
         <div class="form-group">
           <label for="comment">Protocol</label>
-          <textarea class="form-control" rows="5" id="comment" disabled></textarea>
+          <textarea class="form-control" rows="5" id="protocol" disabled></textarea>
         </div>
-        <button class="btn btn-primary" onclick="exportFile()" id="startButton">Export</button>
-        <button class="btn btn-danger" onclick="clear()" id="startButton">Clear</button>
+        <button class="btn btn-primary" onclick="exportFile()">Export</button>
+        <button class="btn btn-danger" onclick="clearProtocol()">Clear</button>
       </div>
     </div>
     <div class="row">
       <div class="col-md-10">
+          <div class="form-group">
           <label for="comment">Log</label>
-          <textarea class="form-control" rows="5" id="comment" disabled></textarea>
+          <textarea class="form-control" rows="5" id="log" disabled></textarea>
+          <small>For debugging only as experiment has to be double blind</small>
+          </div>
+          <button class="btn btn-danger" onclick="clearLog()" id="startButton">Clear</button>
       </div>
     </div>
   </div>
@@ -157,28 +162,33 @@
 
 <script>$(document).ready(function () {
     
-  ping()
+    time()
+    protocol()
+    log()
+    ping()
 
-    $('.needs-validation').submit(function(e){
+    $('.needs-validation').submit(function (e) {
       e.preventDefault()
       e.stopPropagation()
-      if ($('.needs-validation')[0].checkValidity() === true){
+      if ($('.needs-validation')[0].checkValidity() === true) {
         $.ajax({
-          url:'/start',
-          type:'post',
-          data:$('.needs-validation').serialize(),
-          success:function(){
+          url: '/start',
+          type: 'post',
+          data: $('.needs-validation').serialize(),
+          complete: function () {
             form.classList.add('was-validated');
             $('#startButton').disabled = true
-            $('#stopButton').css('visbility', 'visible')
-            $(':input').prop("disabled", true)
+            $('form#form :input').prop("disabled", true)
+            $('#stopButton').css('display', 'block')
           }
-      });
+        });
       }
       else {
 
       }
-      
-  });
-    
-  })</script>
+
+    });
+
+  })
+
+</script>
