Fixing abort function

--- a/templates/lab.html
+++ b/templates/lab.html
@@ -99,7 +99,7 @@
           </thead>
           <tbody>
             <tr>
-              <th scope="row">Wifi-Router</th>
+              <th scope="row">Wifi router</th>
               <td>
                 <div id="wifi-status">
                 </div>
@@ -107,20 +107,20 @@
 
             </tr>
             <tr>
-              <th scope="row">Dect-Basisstation</th>
+              <th scope="row">Dect Base</th>
               <td>
                 <div id="dect-status">
                 </div>
               </td>
 
             </tr>
-            <tr>
+            <!-- <tr>
               <th scope="row">Franks-Laptop</th>
               <td>
                 <div id="archpad-status">
                 </div>
               </td>
-            </tr>
+            </tr> -->
           </tbody>
         </table>
         <button type="button" class="btn btn-danger" onclick="ping()" id="refreshButton">Check</button>
